# OpenMHealth

./: .gitmodules  sleep_database_pro_app.db  sleep_tracking.py
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/philosophism/openmhealth/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  SleepDataContract.java
app/src/main/java/org/philosophism/openmhealth/: AppStatsCollector.java  CallRecord.java  DataManager.java  EventMap.java  Events.java  First2Fragment.java  FirstFragment.java  MainActivity.java  MenuListener.java  MetaData.java  Metric.java  MonthSummary.java  ParticipantData.java  PermissionRequest.java  ResultsManager.java  SMSRecord.java  Second2Fragment.java  SecondFragment.java  Settings.java  SleepDBHelper.java  SleepProvider.java  StartTracker.java  activitytracker.java  sleeptracker.java
app/src/main/res/layout/: activity_app_stats_collector.xml  activity_data_manager.xml  activity_event_list.xml  activity_main.xml  activity_permission_request.xml  activity_settings.xml  activity_start_tracker.xml  checkbox_adapter.xml  content_event_list.xml  events_display.xml  fragment_results_page.xml
app/src/main/res/menu/: activity_main_drawer.xml  main.xml  menu.xml
app/src/main/res/navigation/: mobile_navigation.xml  nav_graph.xml  nav_graph2.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-w1240dp/: dimens.xml
app/src/main/res/values-w600dp/: dimens.xml
app/src/test/java/org/philosophism/openmhealth/: ExampleUnitTest.java
(+30 files in other folders)
